@@ -1,10 +1,11 @@
 * CHANGES IN dplR VERSION 1.7.8
 
 
-File: universalPOWT
+File: powt
 ----------------
 
-- Added SK's universalPOWT function
+- Added SK's universalPOWT function and condensed the existing cook powt
+  function into a single function with a method call.
 
 File: rwl.stats
 ----------------
